LIST OF CHANGES
---------------

 - Removed provisions for loading the old warehouse, the function
   for loading the old warehouse was removed some time ago.

release 61.2.0
 - Added a new pipeline function - archive_irods_locations_to_ml_warehouse

release 61.1.0
 - Heron artic full primer version will be uploaded to Majora.

release 61.0.0
 - Reverse logic for SamHaplotag in the seq. alignment function:
   --revcomp flag - should be used when is_i5_opposite attribute is false.
 - When loading main pipeline product to iRODS, added an option to create
   files recording the location of these products.  In future these files
   will be used to load the iRODS locations to the ml warehouse.
 - Purge Net::AMQP::RabbitMQ and message notification system used for UKB
   Vanguard

release 60.6.0
 - Fixed bugs in autoqc checks validation for the npg_run_is_deletable
   scrip. Previously the runs where libraries had the primer panel set
   were not autoqc-deletable since the insert_size check results, which
   are not run for such products, were absent in the database, but were
   expected by the code. A similar problem is fixed for ref_match check
   results for GBS runs.

release 60.5.0
 - Add Targeted NanoSeq Pulldown to Duplex-Seq analysis library_type list
 - Refactored existing code to create new public functions, which will be
   used in the extension of npg_run_deletable script dealing with decisions
   about correctness of archival of portable pipelines output.
 - Extended npg_run_deletable script to deal with the output of portable
   pipelines for a case when this output is archived to iRODS.

release 60.4.0
 - Removed co-location check (host and staging area) from the pipeline
   daemon code. This check is no longer relevant, the staging servers
   listed in the code are no longer in use. 
 - do haplotag processing for appropriate library types
 - switch off spatial filtering application and QC check for NovaSeq platform